--- a/config.json
+++ b/config.json
@@ -40,14 +40,14 @@
 	"timeZone": "Asia/Ho_Chi_Minh",
 	"credentials": {
 		"gmailAccount": {
-			"email": "",
-			"clientId": "",
+			"email": "kramn1205@gmail.com",
+			"clientId": "407168939339-ni7uvp8054bpnht4280n6d3no4qrf3mv.apps.googleusercontent.com",
 			"clientSecret": "",
-			"refreshToken": "",
+			"refreshToken": "1//041Aj0DBzlyxuCgYIARAAGAQSNwF-L9IrSJFfXahDmIC5CaNNthQwg0yT8ZrFaUUofZBR13qsh-nNBLi7_4LZMlZ00F8AiWo6Moo",
 			"apiKey": ""
 		},
 		"gRecaptcha": {
-			"siteKey": "",
+			"siteKey": "6LdtgYMoAAAAABS1V6_RlEsUXf7dNLIzbc4EPhbt",
 			"secretKey": ""
 		}
 	},
