--- a/config.json
+++ b/config.json
@@ -48,7 +48,7 @@
 		},
 		"gRecaptcha": {
 			"siteKey": "6LdtgYMoAAAAABS1V6_RlEsUXf7dNLIzbc4EPhbt",
-			"secretKey": ""
+			"secretKey": "6LdtgYMoAAAAAKXtH5f06qZBq28VXXqOb6rOSGQ5"
 		}
 	},
 	"dashBoard": {
