--- a/config.json
+++ b/config.json
@@ -42,7 +42,7 @@
 		"gmailAccount": {
 			"email": "kramn1205@gmail.com",
 			"clientId": "407168939339-ni7uvp8054bpnht4280n6d3no4qrf3mv.apps.googleusercontent.com",
-			"clientSecret": "",
+			"clientSecret": "GOCSPX-1joHV_9k0I9SV2ZgMuPuFvrwBg",
 			"refreshToken": "1//041Aj0DBzlyxuCgYIARAAGAQSNwF-L9IrSJFfXahDmIC5CaNNthQwg0yT8ZrFaUUofZBR13qsh-nNBLi7_4LZMlZ00F8AiWo6Moo",
 			"apiKey": ""
 		},
