--- a/config.json
+++ b/config.json
@@ -41,14 +41,14 @@
 	"credentials": {
 		"gmailAccount": {
 			"email": "kramn1205@gmail.com",
-			"clientId": "407168939339-ni7uvp8054bpnht4280n6d3no4qrf3mv.apps.googleusercontent.com",
-			"clientSecret": "GOCSPX-1joHV_9k0I9SV2ZgMuPuFvrwBg",
-			"refreshToken": "1//041Aj0DBzlyxuCgYIARAAGAQSNwF-L9IrSJFfXahDmIC5CaNNthQwg0yT8ZrFaUUofZBR13qsh-nNBLi7_4LZMlZ00F8AiWo6Moo",
+			"clientId": "",
+			"clientSecret": "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",
+			"refreshToken": "",
 			"apiKey": ""
 		},
 		"gRecaptcha": {
-			"siteKey": "6LdtgYMoAAAAABS1V6_RlEsUXf7dNLIzbc4EPhbt",
-			"secretKey": "6LdtgYMoAAAAAKXtH5f06qZBq28VXXqOb6rOSGQ5"
+			"siteKey": "",
+			"secretKey": ""
 		}
 	},
 	"dashBoard": {
