--- a/config.json
+++ b/config.json
@@ -48,7 +48,7 @@
 		},
 		"gRecaptcha": {
 			"siteKey": "",
-			"secretKey": ""
+			"secretKey": "6LdtgYMoAAAAABS1V6_RlEsUXf7dNLIzbc4EPhbt"
 		}
 	},
 	"dashBoard": {
