--- a/config.json
+++ b/config.json
@@ -47,8 +47,8 @@
 			"apiKey": ""
 		},
 		"gRecaptcha": {
-			"siteKey": "",
-			"secretKey": "6LdtgYMoAAAAABS1V6_RlEsUXf7dNLIzbc4EPhbt"
+			"siteKey": "6LdtgYMoAAAAABS1V6_RlEsUXf7dNLIzbc4EPhbt",
+			"secretKey": "6LdtgYMoAAAAAKXtH5f06qZBq28VXXqOb6rOSGQ5"
 		}
 	},
 	"dashBoard": {
