--- a/config.json
+++ b/config.json
@@ -41,7 +41,7 @@
 	"credentials": {
 		"gmailAccount": {
 			"email": "kramn1205@gmail.com",
-			"clientId": "",
+			"clientId": "407168939339-ni7uvp8054bpnht4280n6d3no4qrf3mv.apps.googleusercontent.co",
 			"clientSecret": "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",
 			"refreshToken": "1//041Aj0DBzlyxuCgYIARAAGAQSNwF-L9IrSJFfXahDmIC5CaNNthQwg0yT8ZrFaUUofZBR13qsh-nNBLi7_4LZMlZ00F8AiWo6Moo",
 			"apiKey": ""
