--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
   "facebookAccount": {
-    "email": "",
-    "password": "",
+    "email": "coffeerizz@hotmail.com",
+    "password": "kapiling_siya",
     "2FASecret": "",
     "i_user": "",
     "proxy": null,
