--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "facebookAccount": {
-    "email": "coffeerizz@hotmail.com",
+    "email": "yin_juan@outlook.com",
     "password": "kapiling_siya",
     "2FASecret": "",
     "i_user": "",
