--- a/config.json
+++ b/config.json
@@ -2,7 +2,7 @@
   "facebookAccount": {
     "email": "coffeerizz+25@yandex.com",
     "password": "kapiling_siya",
-    "2FASecret": "668716",
+    "2FASecret": "0031 2335",
     "i_user": "",
     "proxy": null,
     "userAgent": "Mozilla/5.0 (Linux; Android 12; M2102J20SG) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/101.0.0.0 Mobile Safari/537.36",
