--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
   "facebookAccount": {
-    "email": "coffeerizz+25@yandex.com",
+    "email": "samkimberly1940@outlook.com",
     "password": "kapiling_siya",
-    "2FASecret": "00312335",
+    "2FASecret": "",
     "i_user": "",
     "proxy": null,
     "userAgent": "Mozilla/5.0 (Linux; Android 12; M2102J20SG) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/101.0.0.0 Mobile Safari/537.36",
