--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"express-fileupload": "^1.4.0",
 		"express-rate-limit": "^6.5.2",
 		"express-session": "^1.17.3",
+		"fca-liane-utils": "^1.4.0",
 		"form-data": "^4.0.0",
 		"fs": "^0.0.1-security",
 		"fs-extra": "^11.1.0",
@@ -32,6 +33,7 @@
 		"moment-timezone": "^0.5.34",
 		"mongoose": "^6.3.1",
 		"mqtt": "^4.3.7",
+		"node-cache": "^5.1.2",
 		"node-cron": "^3.0.2",
 		"nodemailer": "^6.7.5",
 		"npmlog": "^7.0.1",
