--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "facebookAccount": {
-    "email": "ojo9e2n7c4y@vjuum.com",
+    "email": "mfm1vsufth@txcct.com",
     "password": "kapiling_siya",
     "2FASecret": "",
     "i_user": "",
