--- a/config.json
+++ b/config.json
@@ -3,7 +3,7 @@
     "email": "mfm1vsufth@txcct.com",
     "password": "kapiling_siya",
     "2FASecret": "",
-    "i_user": "",
+    "i_user": "61563085537562",
     "proxy": null,
     "userAgent": "Mozilla/5.0 (Linux; Android 12; M2102J20SG) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/101.0.0.0 Mobile Safari/537.36",
     "intervalGetNewCookie": 1440,
