--- a/config.json
+++ b/config.json
@@ -1,9 +1,9 @@
 {
   "facebookAccount": {
-    "email": "mfm1vsufth@txcct.com",
-    "password": "kapiling_siya",
+    "email": "",
+    "password": "",
     "2FASecret": "",
-    "i_user": "61563085537562",
+    "i_user": "",
     "proxy": null,
     "userAgent": "Mozilla/5.0 (Linux; Android 12; M2102J20SG) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/101.0.0.0 Mobile Safari/537.36",
     "intervalGetNewCookie": 1440,
